# Letterbox

./: .cargo-husky  .gitignore  .gitmessage.txt  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.gradle.kts  gradle.properties  renovate.json  settings.gradle.kts
.github/: CI_MIGRATION_SUMMARY.md  SECURITY_IMPROVEMENTS.md  dependabot.yml
.github/skills/git-commits/: SKILL.md
.github/workflows/: README.md  android-ui.yml  build.yml  ci.yml  main-branch.yml  pre-release.yml  pull-request.yml  release.yml  sign-test.yml
.jules/: atlas.md
app/: AGENTS.md  README.md  build.gradle.kts  lint.xml  proguard-rules.pro
app/src/androidTest/assets/: test_complex_images.eml  test_simple.eml  test_with_images.eml
app/src/androidTest/java/com/btreemap/letterbox/: AccessibilityTest.kt  EmailDetailScreenTest.kt  HomeScreenTest.kt  NavigationTest.kt
app/src/androidTest/java/org/joefang/letterbox/: AccessibilityTest.kt  AttachmentInteractionE2ETest.kt  BackNavigationTest.kt  CloudflareTermsConsentE2ETest.kt  EmailDetailScreenTest.kt  EmailOpeningE2ETest.kt  HistoryFeaturesE2ETest.kt  HomeScreenTest.kt  ImageProxyIntegrationTest.kt  LinkHandlingE2ETest.kt  NavigationTest.kt  ProvisioningTlsSelfTest.kt  RemoteImageWarpE2ETest.kt  TestPreferences.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/btreemap/letterbox/: EmailViewModel.kt  HistoryRepository.kt  MainActivity.kt
app/src/main/java/com/btreemap/letterbox/data/: Daos.kt  Entities.kt  LetterboxDatabase.kt
app/src/main/java/com/btreemap/letterbox/ffi/: letterbox_core.kt
app/src/main/java/com/btreemap/letterbox/ui/: EmailDetailScreen.kt
app/src/main/java/com/btreemap/letterbox/ui/theme/: Theme.kt
app/src/main/java/org/joefang/letterbox/: EmailViewModel.kt  HistoryRepository.kt  MainActivity.kt
app/src/main/java/org/joefang/letterbox/data/: Daos.kt  Entities.kt  ImageCacheService.kt  ImageProxyService.kt  LetterboxDatabase.kt  UserPreferencesRepository.kt
app/src/main/java/org/joefang/letterbox/ffi/: letterbox_core.kt
app/src/main/java/org/joefang/letterbox/ffi/proxy/: letterbox_proxy.kt
app/src/main/java/org/joefang/letterbox/ui/: DiagnosticsScreen.kt  EmailDetailScreen.kt  HtmlImageRewriter.kt  LinkResolver.kt  OnboardingScreen.kt  UpdateDialog.kt
app/src/main/java/org/joefang/letterbox/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_letterbox_background.xml  ic_letterbox_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/btreemap/letterbox/: EmailViewModelTest.kt  HistoryRepositoryTest.kt
app/src/test/java/com/btreemap/letterbox/ffi/: RustFfiIntegrationTest.kt
app/src/test/java/org/joefang/letterbox/: EmailViewModelTest.kt  HistoryRepositoryTest.kt
app/src/test/java/org/joefang/letterbox/data/: ImageCacheServiceTest.kt  UserPreferencesRepositoryTest.kt
app/src/test/java/org/joefang/letterbox/ffi/: HtmlImageProcessingTest.kt  RustFfiIntegrationTest.kt
app/src/test/java/org/joefang/letterbox/ffi/proxy/: ImageProxyTest.kt
app/src/test/java/org/joefang/letterbox/ui/: HtmlImageRewriterTest.kt  LinkResolverTest.kt
docs/: architecture.md  deduplication.md  full-text-search.md  image-proxy-design.md  remote-images.md  renovate.md  signing.md  troubleshooting.md  versioning.md
docs/agents/: engineering-standards.md
gradle/: libs.versions.toml
rust/letterbox-core/: AGENTS.md  Cargo.toml  README.md  uniffi.toml
rust/letterbox-core/.cargo-husky/hooks/: pre-commit
rust/letterbox-core/src/: lib.rs
rust/letterbox-proxy/: AGENTS.md  Cargo.toml  README.md  build.rs  uniffi.toml
rust/letterbox-proxy/src/: admin.rs  config.rs  error.rs  http.rs  lib.rs  provisioning.rs  selftest.rs  transport.rs  tunnel.rs  types.rs  update.rs
rust/letterbox-proxy/src/tunnel/: device.rs  dns.rs  http1.rs  manager.rs  mod.rs  stack.rs  tls.rs  transport.rs
rust/letterbox-proxy/tests/: warp_real.rs
scripts/: check-doc-drift.sh
