[package]
name = "letterbox-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "letterbox_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
thiserror = "1.0"
mail-parser = "0.11.1"
uniffi = { version = "0.30.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }

[dev-dependencies]
once_cell = "1.19"
