[package]
name = "letterbox-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "letterbox_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
thiserror = "2.0.18"
mail-parser = "0.11.1"
uniffi = { version = "0.31.0", features = ["cli"] }
scraper = "0.25.0"
url = "2.5.8"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[dev-dependencies]
once_cell = "1.21.3"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]
