[package]
name = "letterbox-proxy"
version = "0.1.0"
edition = "2021"
description = "Privacy-preserving image proxy using Cloudflare WARP over WireGuard"
readme = "README.md"

[lib]
name = "letterbox_proxy"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "uniffi-bindgen-proxy"
path = "uniffi-bindgen.rs"

[features]
default = []
# Enable mock mode for testing without real network
mock = []

[dependencies]
# Error handling
thiserror = "2.0.18"
anyhow = "1.0.101"

# Async runtime
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "time", "net", "io-util", "macros", "fs"] }
futures = "0.3.31"

# HTTP client for WARP provisioning (runs outside tunnel)
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "cookies"] }

# Cryptography for WireGuard key generation (use the version boringtun needs)
x25519-dalek = "2.0.1"
base64 = "0.22.1"
rand = "0.9.2"

# WireGuard tunnel (boringtun-based)
boringtun = "0.7.0"

# TCP/IP stack
smoltcp = { version = "0.12.0", default-features = false, features = ["medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp", "socket-dns"] }

# TLS for HTTPS connections
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std"] }
webpki-roots = "1.0.6"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# URL parsing
url = "2.5.8"

# Logging
log = "0.4.29"
env_logger = "0.11.8"

# UniFFI for Kotlin bindings
uniffi = { version = "0.31.0", features = ["cli"] }

# Caching
lru = "0.16.3"

# Time handling
chrono = { version = "0.4.43", default-features = false, features = ["std", "clock"] }

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[dev-dependencies]
tokio-test = "0.4.5"
mockall = "0.14.0"
tempfile = "3.24.0"
once_cell = "1.21.3"
wiremock = "0.6.5"
